css/habit.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import 'palette.css';

body{
    overflow: hidden;
    font-family: 'Poppins', sans-serif;
    background-color: var(--backgroundcolor);
    color: var(--secondarycolor);
    margin: 0;
}

.profile-container{    
    text-align: right;
    background-color: var(--primarycolor);
    color: white;
    
    border-radius: 0 0 0 50px;
    line-height: 0px;
    padding: 0 50px;
}

.board-wrapper{
    display: flex;
    flex-direction: row;
    margin: 10px 10px;
    gap: 5px;

    overflow-x: auto;
}

.habit-category-container{
    height: 80vh;
    width: 250px;
    padding: 5px;

    background-color: var(--secondarycolor);
    color: var(--backgroundcolor);
    border-radius: 2px;
}

/* Habit Maker */
.habit-maker{
    height: fit-content;
    background-color: var(--primarycolor);
    border-radius: 4px;
    padding: 2px;
}
.board-name{
    line-height: 0px;
    font-weight: 600;
}
.habit-maker select{
    font-family: 'Poppins', sans-serif;
    color: var(--backgroundcolor);
    background-color: var(--secondaryaccentcolor);
    border-radius: 2px;
    border: none;
}
.habit-name-submit{
    display: flex;
}
.habit-name-submit input[type="text"]{
    width: 100%;
    border: 1px solid var(--secondaryaccentcolor);
    font-family: 'Poppins', sans-serif;
    border-radius: 3px 0 0 3px;
}
.habit-name-submit button{
    border-radius: 0 3px 3px 0;
    background-color: var(--secondaryaccentcolor);
    border: none;
    cursor: pointer;
}

.habit-option-wrapper{
    display: flex;
    justify-content: space-between;
    gap: 2px;
    width: 100%;
    padding: 2px 0 2px 0;
}
input{
    box-sizing: border-box;
}
input[type="number"]{
    width: 9em;
}
.name-submit{
    display: flex;
    flex-direction: row;
}

/* Habits Container */
.habits-container{
    min-height: fit-content;
    max-height: 59vh;
    margin: 5px;
    border-radius: 5px;
    overflow-y: auto;
}

.habit{
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 60px;
    margin: 5px 0 5px 0;
    /* padding: 5px; */
    box-sizing: border-box;

    background-color: var(--secondaryaccentcolor);
    border-radius: 2px;
    cursor:help;
}
.habit-details{
    width: 100%;
    padding-left: 5px;
    align-self: center;
    line-height: 5px;
    font-size: small;
}
.habit-control{
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0%;
    transition: all 0.2s;
}
.habit-details:hover + .habit-control, .habit-control:hover{
    opacity: 100%;
    transition: all 0.2s;
}
.habit-control button{
    border: none;
    color: white;
    height: 100%;
    cursor: pointer;
    transition: all 0.3s;
}
.habit-control button:nth-child(1){
    background-color: var(--buttonPrimary);
}
.habit-control button:nth-child(2){
    background-color: var(--buttonSecondary);
}
.habit-control button:hover{
    background-color: var(--backgroundcolor);
    transition: all 0.3s;
}
/* Create New Board */
.create-new-category{
    width: 250px;
    height: fit-content;
    padding: 5px;
    line-height: 5px;

    background-color: var(--secondarycolor);
    color: var(--backgroundcolor);
    border-radius: 2px;
}
.create-new-category div{
    display: flex;
}
.create-new-category p{
    font-weight: 600;
}
.create-new-category input[type="text"]{
    width: 100%;
    box-sizing: border-box;
    border: 1px solid var(--secondaryaccentcolor);
    font-family: 'Poppins', sans-serif;
    border-radius: 3px 0 0 3px;
}
.create-new-category button{
    border: 1px solid var(--secondaryaccentcolor);
    border-radius: 0 3px 3px 0;
    cursor: pointer;
}

